--- a/LibLink/Inicio.html
+++ b/LibLink/Inicio.html
@@ -526,11 +526,180 @@
                                 <td>Universidad Nacional de Colombia - UNAL</td>
 
                                 <td><button link="https://bibliotecas.unal.edu.co/" class="linkbutton"
-                                                onClick="visit(this)"></button></td>
+                                                onClick="visit(this)">Biblioteca</button></td>
 
                                 <td><button link="http://168.176.5.96/F/XJNPLA4GYIT6HPPLR4MF24H597GRHN2H5EGLH7GS6FGGIX8N21-31974?func=find-b-0&local_base=SNB01"
-                                                class="linkbutton" onClick="visit(this)"></button></td>
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
                         </tr>
+
+                        <tr>
+                                <td>Universidad Manuel Beltrán - UMB (Bogotá)</td>
+
+                                <td><button link="https://web.umb.edu.co/inicio-biblioteca" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                                <!--Este enlace tiene un error-->
+                        </tr>
+
+                        <tr>
+                                <td>Universidad del Norte – UNINORTE (Barranquilla)</td>
+
+                                <td><button link="https://www.uninorte.edu.co/web/biblioteca/biblioteca"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de la Sabana – UNISABANA (Chía, Cundinamarca)</td>
+
+                                <td><button link="https://www.uninorte.edu.co/web/biblioteca/biblioteca"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad del Rosario (Bogotá)</td>
+
+                                <td><button link="https://catalogo.urosario.edu.co/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Fundación Universitaria de Ciencias de la Salud (Bogotá)</td>
+
+                                <td><button link="https://www.fucsalud.edu.co/biblioteca" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://bibliografico.fucsalud.edu.co/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Politécnico Grancolombiano (Bogotá)</td>
+
+                                <td><button link="https://www.poli.edu.co/content/biblioteca" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de la Salle (Bogotá) Sede Chapinero</td>
+
+                                <td><button link="https://www.lasalle.edu.co/wps/portal/Home/Principal/LaUniversidad/Biblioteca"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://biblioch1.lasalle.edu.co/janium-bin/busqueda_rapida.pl?Id=20110407100337"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>Universidad del Magdalena (Santa Marta D.T.C.H)</td>
+
+                                <td><button link="https://www.unimagdalena.edu.co/UnidadesOrganizativas/Dependencia/6"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad del Tolima (Ibagué)</td>
+
+                                <td><button link="http://administrativos.ut.edu.co/vicerrectoria-de-docencia/gestion-bibliotecas.html"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                                <!--Este enlace es opcional, ya que los dos enlaces que se encuentran en 
+                                                el pdf parecen estar rotos, ya que no llevan a ningún lado-->
+                        </tr>
+
+                        <tr>
+                                <td>Universidad del Valle (Cali)</td>
+
+                                <td><button link="https://biblioteca.univalle.edu.co/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://opac.univalle.edu.co/cgi-olib/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Santiago de Cali (Cali)</td>
+
+                                <td><button link="https://biblioteca.usc.edu.co/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://usc.janium.net/janium-bin/busqueda_rapida.pl?Id=20191128150520"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Santo Tomás de Aquino (Bogotá)</td>
+
+                                <td><button link="https://crai.usta.edu.co/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Santo Tomás de Aquino (Bucaramanga)</td>
+
+                                <td><button link="https://catalogocrai.usantotomas.edu.co/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Sergio Arboleda</td>
+
+                                <td><button link="https://www.usergioarboleda.edu.co/biblioteca" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://bibliotecausa.janium.net/janium-bin/busqueda_rapida.pl?Id=20160330141002"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Simón Bolívar</td>
+
+                                <td><button link="https://www.unisimon.edu.co/servicios/biblioteca" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://catalogo.unisimon.edu.co/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Tecnológica de Bolívar</td>
+
+                                <td><button link="https://utb-primo.hosted.exlibrisgroup.com/primo-explore/search?vid=UTB&lang=es_ES&fromRedirectFilter=true"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Pontificia Bolivariana</td>
+
+                                <td><button link="https://www.upb.edu.co/es/bibliotecas" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Costa Rica</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de Costa Rica</td>
+
+                                <td><button link="https://sibdi.ucr.ac.cr/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://aleph.sibdi.ucr.ac.cr/F" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Estatal a Distancia (UNED)</td>
+
+                                <td><button link="https://www.uned.ac.cr/academica/cidreb/biblioteca/servicios"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                        </tr>
+
+
+
+
 
                 </table>
         </div>
