Arreglo de errores

--- a/LibLink/Inicio.html
+++ b/LibLink/Inicio.html
@@ -697,6 +697,135 @@
 
                         </tr>
 
+                        <tr>
+                                <td>
+                                        <h2>Ecuador</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Escuela Politécnica Nacional</td>
+
+                                <td><button href="https://biblioteca.epn.edu.ec/cgi-bin/koha/opac-main.pl"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Escuela Superior Politécnica de Chimborazo - ESPOCH</td>
+
+                                <td><button href="https://biblioteca.epn.edu.ec/cgi-bin/koha/opac-search.pl?idx=&q=&branch_group_limit=branch%3ABC"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de Guayaquil (UG)</td>
+
+                                <td><button href="https://www.ug.edu.ec/biblioteca-virtual/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button href="https://catalogo.ug.edu.ec/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad internacional del Ecuador - UIDE</td>
+
+                                <td><button href="https://www.uide.edu.ec/biblioteca/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://biblioteca.uide.edu.ec/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Técnica Particular de Loja</td>
+
+                                <td><button link="https://biblioteca.utpl.edu.ec/?option=com_wrapper&Itemid=74"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://bibliotecautpl.utpl.edu.ec/cgi-bin/abnetclwo/O9570/ID1c11e250?ACC=101"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Tecnológica Equinoccial</td>
+
+                                <td><button link="https://www.ute.edu.ec/biblioteca/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://www.stodomingo.ute.edu.ec/sgb/catalogo.aspx" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2> El Salvador</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Dr. José Matías Delgado</td>
+
+                                <td><button link="https://biblioteca.ujmd.edu.sv/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button href="https://webquery.ujmd.edu.sv/siab/opac3/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Don Bosco</td>
+
+                                <td><button link="https://www.udb.edu.sv/udb/index.php/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://biblio.udb.edu.sv/cgi-bin/koha/opac-search.pl"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Gerardo Barrios (UGB)</td>
+
+                                <td><button link="https://www.ugb.edu.sv/noticias-biblioteca.html" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://biblioteca.ugb.edu.sv/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>España</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad carlos III de Madrid</td>
+
+                                <td><button link="https://bibliotecas.uc3m.es/primo-explore/search?vid=34UC3M_VU1&lang=es_ES"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h1>Estados Unidos</h1>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Instituto de Estudios Avanzados de las Américas</td>
+
+                                <td><button link="https://www.lanl.gov/library/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://www.educoas.org/portal/links.aspx?culture=es&navid=25"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+
 
 
 
