finalización del trabajo

--- a/LibLink/Inicio.html
+++ b/LibLink/Inicio.html
@@ -811,7 +811,7 @@
 
                         <tr>
                                 <td>
-                                        <h1>Estados Unidos</h1>
+                                        <h2>Estados Unidos</h2>
                                 </td>
                         </tr>
 
@@ -825,10 +825,370 @@
                                                 class="linkbutton" onClick="visit(this)">Catálogo</button></td>
                         </tr>
 
+                        <tr>
+                                <td>Los Alamos National Laboratories</td>
+
+                                <td><button link="https://www.lanl.gov/library/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://lanl-primo.hosted.exlibrisgroup.com/primo-explore/search?vid=LANL&lang=en_US&fromRedirectFilter=true"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>University of South Florida</td>
+
+                                <td><button link="https://lib.usf.edu/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
 
 
+                        </tr>
 
+                        <tr>
+                                <td>
+                                        <h2>Honduras</h2>
+                                </td>
+                        </tr>
+                        <tr>
+                                <td>Universidad Pedagógica Nacional Francisco Morazan</td>
 
+                                <td><button link="https://www.cervantesvirtual.com/portales/honduras_upn_francisco_morazan/"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://www.cervantesvirtual.com/portales/honduras_upn_francisco_morazan/catalogo/"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>México</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Cetys Universidad - Baja California</td>
+
+                                <td><button link="https://www.cetys.mx/biblioteca/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>Centro de Investigaciones Biológicas del Noroeste CIBNOR</td>
+
+                                <td><button link="https://www.cibnor.gob.mx/posgrados/biblioteca" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://www.cibnor.gob.mx/posgrados/biblioteca/catalogo-de-la-biblioteca"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Centro de Cooperación Regional para la Educación de Adultos - América Latina REFAL
+                                </td>
+
+                                <td><button link="https://www.crefal.org/index.php?option=com_content&view=article&id=541&Itemid=600"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://biblioteca.crefal.edu.mx/CatalogoEnLinea/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Instituto Nacional de Astrofísica, Óptica y Electrónica INAOE</td>
+
+                                <td><button link="https://www.inaoep.mx/biblioteca/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Instituto Tecnológico y de Estudios Superiores de Monterrey ITESM</td>
+
+                                <td><button link="https://biblioteca.tec.mx/inicio" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Autónoma Estado de Morelos</td>
+
+                                <td><button link="http://antar.biblioteca.uaem.mx:8080/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://antar.biblioteca.uaem.mx:8991/F/?func=find-b-0"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                                <!--Enlace con problemas-->
+
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de Guadalajara</td>
+
+                                <td><button link="https://www.udg.mx/servicios/bibliotecas" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://www.google.com/url?sa=D&q=http://148.202.105.23:8991/F/%3Ffunc%3Dfind-b-0%26local_base%3DUDG01&ust=1657812360000000&usg=AOvVaw2SNtMY8DKyEH_iDLslBxH4&hl=es&source=gmail"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                                <!--Este enlace tiene problemas-->
+
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de las Américas - Puebla</td>
+
+                                <td><button link="https://biblio.udlap.mx/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de Monterrey</td>
+
+                                <td><button link="https://biblioteca.udem.edu.mx/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://bibsrv.udem.edu.mx:8080/hipudem.html" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Politécnica del Valle de México UPVM</td>
+
+                                <td><button link="https://bibliotecas.uvmnet.edu/portico/gui/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Veracruzana</td>
+
+                                <td><button link="https://www.uv.mx/bvirtual/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://catbiblio.uv.mx/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Nicaragua</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Politécnica de Nicaragua</td>
+
+                                <td><button link="https://www.google.com/url?sa=D&q=https://biblioteca.upoli.edu.ni/&ust=1657812360000000&usg=AOvVaw2tF5YW3YNwAzy8o8v-2tXy&hl=es&source=gmail"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                                <!--error 522-->
+
+                                <td><button link="https://abcdbiblioteca.upoli.edu.ni/site/php/index.php"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                                <!--error 522-->
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Panamá</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>universidad Católica Santa María de la Antigua</td>
+
+                                <td><button link="http://usma.cloudapp.net/library/index.php/Especial:GSMSearchPage"
+                                                class="linkbutton" onClick="visit(this)">Bibloteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Paraguay</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Autónoma de Asunción</td>
+
+                                <td><button link="http://biblioteca.uaa.edu.py/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://www.uaa.edu.py/biblioteca/catalogo/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Católica Nuestra Señora de la Asunción</td>
+
+                                <td><button link="https://www.universidadcatolica.edu.py/?s=biblioteca"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                                <!--Realmente no lleva a la página de la biblioteca-->
+
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Perú</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Pontificia universidad Católica del Perú</td>
+
+                                <td><button link="https://biblioteca.pucp.edu.pe/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://pucp.ent.sirsi.net/client/es_ES/campus/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Instituto de Educación Superior - TECSUP</td>
+
+                                <td><button link="https://app.tecsup.edu.pe/SGA/biblioteca/index.html"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Nacional de Ingeniería</td>
+
+                                <td><button link="http://www.bibliotecacentral.uni.edu.pe/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://www.catalogo.uni.edu.pe/cgi-bin/koha/opac-user.pl"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                                <!--Enlace con problema-->
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Nacional de San Agustín de Arequipa</td>
+
+                                <td><button link="https://www.unsa.edu.pe/areaacademica/bibliotecas" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://www.virtual.unsa.edu.pe/sisbi/catalogo/index.htm"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Peruana Cayetano Heredia</td>
+
+                                <td><button link="https://dugic.cayetano.edu.pe/" class=" linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://biblioteca.upch.edu.pe/F/ULBJDLH9BVTI44LYAJGQLTDXK4KP85AFTVTMLPHDHNJPM69EVJ-09812?func=find-b-0"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Puerto Rico</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de Puerto Rico</td>
+
+                                <td><button link="https://www.upr.edu/biblioteca-rum/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://unilib.uprm.edu/uhtbin/cgisirsi.exe/?ps=6pAaKIDnSd/GENLIBRARY/X/60/1180/X"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Republica Dominicana</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Fundación Global Democracia y Desarrollo</td>
+
+                                <td><button link="http://bibliotecajuanbosch.org/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://35.239.158.177" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                                <!--Enlace con problemas-->
+                        </tr>
+
+                        <tr>
+                                <td>UNAPEC - Universidad APEC</td>
+
+                                <td><button link="https://catalogobiblioteca.unapec.edu.do/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Iberoamericana</td>
+
+                                <td><button link="https://opacbiblioteca.unibe.edu.do/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Uruguay</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de la República de Uruguay</td>
+
+                                <td><button link="https://biur.edu.uy/F/2JHA84KVS7SEAMMS1FGBSY1C4NVNI36C7PJA6SSSNJ5D9F4HJQ-07872?func=find-b-0"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Ort</td>
+
+                                <td><button link="https://bibliotecas.ort.edu.uy/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>
+                                        <h2>Venezuela</h2>
+                                </td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Central de Venezuela</td>
+
+                                <td><button link="http://www.ucv.ve/organizacion/vrac/gerencia-de-informacion-conocimiento-y-talento/biblioteca-central-ucv/catalogo-de-la-biblioteca.html"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://www.google.com/url?sa=D&q=file:///C:/Users/ugt/Downloads/Cat%C3%A1logo&ust=1657812360000000&usg=AOvVaw0aKY-_zitHX2phitr96_es&hl=es&source=gmail"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                                <!--URL no válida-->
+                        </tr>
+
+                        <tr>
+                                <td>Universidad de los Andes – SERBIULA</td>
+
+                                <td><button link="http://www.saber.ula.ve/handle/123456789/5310" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Metropolitana de Caracas UNIMET</td>
+
+                                <td><button link="https://www.unimet.edu.ve/descubre-la-ciencia-en-los-espacios-de-la-biblioteca-pedro-grases/"
+                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://andromeda.unimet.edu.ve/catalogo/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+                        </tr>
+
+                        <tr>
+                                <td>Universidad Simón Bolívar</td>
+
+                                <td><button link="http://www.bib.usb.ve/" class="linkbutton"
+                                                onClick="visit(this)">Bibloteca</button></td>
+                        
+                                <td><button link="http://opac.bib.usb.ve/" class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                        </tr>
 
                 </table>
         </div>
