Arreglo de errores en algunos botones y notificación de enlaces con problemas

--- a/LibLink/Inicio.html
+++ b/LibLink/Inicio.html
@@ -79,11 +79,14 @@
                                 <td><button link="https://www.fceqyn.unam.edu.ar/biblioteca/" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
 
+                                <td><button link="https://biblio-opac.fceqyn.unam.edu.ar/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
+
                         </tr>
                         <tr>
                                 <td>Facultad de ingeniería</td>
 
-                                <td><button link="https://biblioteca.fio.unam.edu.ar/cgi-bin/koha/opac-searchresults.pl?type=opac&keyword=calculo"
+                                <td><button link="https://biblioteca.fio.unam.edu.ar/cgi-bin/koha/opac-search.pl"
                                                 class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
 
                         </tr>
@@ -122,13 +125,7 @@
                                         <h2>Bolivia</h1>
                                 </td>
                         </tr>
-                        <tr>
-                                <td>Universidad la Salle La Paz</td>
 
-                                <td><button link="https://www.ulasalle.edu.bo/sp/index.php/nuestra-universidad/bibliotecas"
-                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
-
-                        </tr>
                         <tr>
                                 <td>Universidad Privada Santa Cruz de la Sierra </td>
 
@@ -171,6 +168,9 @@
 
                                 <td><button link="http://www.inpe.br/biblioteca/" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="http://bibdigital.sid.inpe.br/col/sid.inpe.br/bibdigital@80/2006/04.07.15.50.13/doc/mirror.cgi"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
 
                         </tr>
                         <tr>
@@ -266,7 +266,7 @@
                                 <td><button link="https://www.banrepcultural.org/biblioteca-virtual" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
 
-                                <td><button link="http://ticuna.banrep.gov.co:8080/cgi-bin/abnetclwo20/O8101/IDd8dc8434?ACC=101"
+                                <td><button link="http://ticuna.banrep.gov.co:8080/cgi-bin/abnetclwo20/O8104/IDaf331856?ACC=101"
                                                 class="linkbutton" onClick="visit(this)">Catálogo</button></td>
                         </tr>
 
@@ -311,8 +311,8 @@
                                 <td><button link="https://biblioteca.itm.edu.co/bibliotecas.html" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
 
-                                <td><button link="https://www.google.com/url?sa=D&q=https://catalogobibliotecas.itm.edu.co/cgi-olib/&ust=1647547260000000&usg=AOvVaw0mlAC2wPUpl9s5AxCTCJRz&hl=es&source=gmail"
-                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+                                <td><button link="https://catalogobibliotecas.itm.edu.co/cgi-olib/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
                         </tr>
                         <tr>
                                 <td>Pontificia Universidad Javeriana. PUJ (Bogotá) </td>
@@ -457,7 +457,7 @@
                         <tr>
                                 <td>Universidad del Quindío - UNIQUINDIO</td>
 
-                                <td><button link="http://biblio.unicauca.edu.co" class="linkbutton"
+                                <td><button link="https://library.uniquindio.edu.co/" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
 
                                 <td><button link="https://catalogo.uniquindio.edu.co/" class="linkbutton"
@@ -520,6 +520,9 @@
 
                                 <td><button link="https://biblioteca.unad.edu.co/" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
+
+                                <td><button link="https://symphony.unad.edu.co/uhtbin/cgisirsi/?ps=jSXgMV31yL/BCELESTIN/X/60/502/X"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
                         </tr>
 
                         <tr>
@@ -550,8 +553,8 @@
                         <tr>
                                 <td>Universidad de la Sabana – UNISABANA (Chía, Cundinamarca)</td>
 
-                                <td><button link="https://www.uninorte.edu.co/web/biblioteca/biblioteca"
-                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                                <td><button link="https://www.unisabana.edu.co/biblioteca/" class="linkbutton"
+                                                onClick="visit(this)">Biblioteca</button></td>
                         </tr>
 
                         <tr>
@@ -706,32 +709,28 @@
                         <tr>
                                 <td>Escuela Politécnica Nacional</td>
 
-                                <td><button href="https://biblioteca.epn.edu.ec/cgi-bin/koha/opac-main.pl"
+                                <td><button link="https://biblioteca.epn.edu.ec/cgi-bin/koha/opac-main.pl"
                                                 class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
-                        </tr>
 
-                        <tr>
-                                <td>Escuela Superior Politécnica de Chimborazo - ESPOCH</td>
-
-                                <td><button href="https://biblioteca.epn.edu.ec/cgi-bin/koha/opac-search.pl?idx=&q=&branch_group_limit=branch%3ABC"
-                                                class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
+                                <td><button Link="https://biblioteca.epn.edu.ec/cgi-bin/koha/opac-search.pl?idx=&q=&branch_group_limit=branch%3ABC"
+                                                class="linkbutton" onClick="visit(this)">Catálogo</button></td>
 
                         </tr>
 
                         <tr>
                                 <td>Universidad de Guayaquil (UG)</td>
 
-                                <td><button href="https://www.ug.edu.ec/biblioteca-virtual/" class="linkbutton"
+                                <td><button Link="https://www.ug.edu.ec/biblioteca-virtual/" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
 
-                                <td><button href="https://catalogo.ug.edu.ec/" class="linkbutton"
+                                <td><button Link="https://catalogo.ug.edu.ec/" class="linkbutton"
                                                 onClick="visit(this)">Catálogo</button></td>
                         </tr>
 
                         <tr>
                                 <td>Universidad internacional del Ecuador - UIDE</td>
 
-                                <td><button href="https://www.uide.edu.ec/biblioteca/" class="linkbutton"
+                                <td><button Link="https://www.uide.edu.ec/biblioteca/" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
 
                                 <td><button link="https://biblioteca.uide.edu.ec/" class="linkbutton"
@@ -745,7 +744,7 @@
                                 <td><button link="https://biblioteca.utpl.edu.ec/?option=com_wrapper&Itemid=74"
                                                 class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
 
-                                <td><button link="https://bibliotecautpl.utpl.edu.ec/cgi-bin/abnetclwo/O9570/ID1c11e250?ACC=101"
+                                <td><button link="https://bibliotecautpl.utpl.edu.ec/cgi-bin/abnetclwo/O9944/ID57915d55?ACC=101"
                                                 class="linkbutton" onClick="visit(this)">Catálogo</button></td>
                         </tr>
 
@@ -771,7 +770,7 @@
                                 <td><button link="https://biblioteca.ujmd.edu.sv/" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
 
-                                <td><button href="https://webquery.ujmd.edu.sv/siab/opac3/" class="linkbutton"
+                                <td><button link="https://webquery.ujmd.edu.sv/siab/opac3/" class="linkbutton"
                                                 onClick="visit(this)">Catálogo</button></td>
                         </tr>
 
@@ -818,7 +817,7 @@
                         <tr>
                                 <td>Instituto de Estudios Avanzados de las Américas</td>
 
-                                <td><button link="https://www.lanl.gov/library/" class="linkbutton"
+                                <td><button link="http://www.educoas.org/portal/bdigital/es/eadultos.aspx?culture=es&navid=201" class="linkbutton"
                                                 onClick="visit(this)">Biblioteca</button></td>
 
                                 <td><button link="http://www.educoas.org/portal/links.aspx?culture=es&navid=25"
@@ -1136,7 +1135,7 @@
                         <tr>
                                 <td>Universidad de la República de Uruguay</td>
 
-                                <td><button link="https://biur.edu.uy/F/2JHA84KVS7SEAMMS1FGBSY1C4NVNI36C7PJA6SSSNJ5D9F4HJQ-07872?func=find-b-0"
+                                <td><button link="https://biur.edu.uy/F/YFACQV6H3VP7S45QLUMJJKBSML48PPG4Y7BLL56FKECMQ21R5C-00580?func=find-b-0"
                                                 class="linkbutton" onClick="visit(this)">Biblioteca</button></td>
                         </tr>
 
@@ -1186,8 +1185,9 @@
 
                                 <td><button link="http://www.bib.usb.ve/" class="linkbutton"
                                                 onClick="visit(this)">Bibloteca</button></td>
-                        
-                                <td><button link="http://opac.bib.usb.ve/" class="linkbutton" onClick="visit(this)">Catálogo</button></td>
+
+                                <td><button link="http://opac.bib.usb.ve/" class="linkbutton"
+                                                onClick="visit(this)">Catálogo</button></td>
                         </tr>
 
                 </table>
